fixed UI on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,7 +93,7 @@ a:hover {
     }
 
     h1 {
-        font-size: 2.2rem;
+        font-size: 2rem;
         margin-bottom: 1rem;
     }
 
